# cairo-board

./: .gitignore  CMakeLists.txt  FindFontconfig.cmake  Makefile  README.md  analysis_panel.c  analysis_panel.h  cairo-board.css  cairo-board.h  channels.c  chess-backend.c  chess-backend.h  clock-widget.c  clock-widget.h  clocks.c  clocks.h  configuration.h  crafty-adapter.c  crafty-adapter.h  crafty_scanner.h  crafty_scanner.lex  drawing-backend.c  drawing-backend.h  eco_long.idx  full_eco.idx  ics_scanner.h  ics_scanner.lex  main.c  make_lex_source.sh  netstuff.c  netstuff.h  san_scanner.h  san_scanner.lex  test.c  test.h  uci-adapter.c  uci-adapter.h  uci_scanner.h  uci_scanner.lex
pgn/: 2prom.pgn  2prom100.pgn  Adams.pgn  Bramary.pgn  Karpov.pgn  Kasparov.pgn  Korchnoi.pgn  Leko.pgn  en_passant.pgn  en_passant2.pgn  hash_test.pgn  longest.pgn  n.pgn  prom.pgn  sample.pgn  test_kill.pgn  test_kill_animated.pgn  test_kill_complex.pgn  test_kill_complex_animated.pgn
src/: analysis_panel.c  cairo-board.css  cairo-board.h  channels.c  channels.h  chess-backend.c  chess-backend.h  clock-widget.c  clocks.c  configuration.c  crafty_scanner.h  crafty_scanner.lex  drawing-backend.c  drawing-backend.h  ics-adapter.c  ics-adapter.h  ics_scanner.h  ics_scanner.lex  main.c  netstuff.c  netstuff.h  san_scanner.h  san_scanner.lex  test.c  uci-adapter.c  uci-adapter.h  uci_scanner.h  uci_scanner.lex
